--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -14,54 +14,23 @@ html { box-sizing: border-box; }
 .bg-{{c[0]}}     { background-color: {{ c[1] }} !important; }
 {% endfor %}
 
-/* ----- per-post colors! ----- */
-{% for node in site.posts %}
-  {% capture id %}{{ node.id | remove:'/' | downcase }}{% endcapture %}
-  {% capture bg %}{% if site.colors[node.bg] %}{{ site.colors[node.bg] }}{% else %}{{ node.bg }}{% endif %}{% endcapture %}
-  {% capture fg %}{% if site.colors[node.color] %}{{ site.colors[node.color] }}{% else %}{{ node.color }}{% endif %}{% endcapture %}
-  nav .p-{{id}} { border-color: {{ bg }}; }
-  #{{id}} { background-color: {{ bg }} !important; color: {{ fg }}; }
-  #{{id}} a { color: {{ fg }}; }
-  #{{id}} .sectiondivider { color: {{ bg }}; }
-{% endfor %}
-
-
-/* ----- code, syntax highlighting, etc ----- */
-
-code, pre { font-family: Monaco, Menlo, Consolas, "Courier New", monospace; }
-
-/* spesifically inline code */
-code, pre {
-  background: rgba(255,255,255,0.2);
-  display: inline;
-  word-wrap: break-word;
-}
-
-/* block code */
-pre code { background: none; display: block; }
-pre {
-  display: block;
-  margin: 20px 5%;
-  padding: 4px 8px;
-  background: rgba(255,255,255,0.1);
-  word-wrap: break-word;
-}
-
-.highlight { margin:20px 5%; }
-
-
-/* ----- base elements ----- */
-
 img {
   max-width:100%!important;
   height:auto;
   vertical-align:middle;
 }
 
+code {
+  font-family: monospace;
+  background: rgba(255,255,255,0.2);
+  display: inline;
+  word-wrap: break-word;
+}
+
 hr {
   margin:60px auto;
   width:50%;
-  border-color: {{ site.colors.black }};
+  border-color: {{ site.colors.black.dark }};
 }
 
 .container { word-wrap: break-word; }
@@ -74,10 +43,10 @@ hr {
   padding: 0 4%;
 }
 .container p, .container ol, .container ul {
-  font-size: 17px;
+  font-size: 19px;
+  line-height: 31px;
   padding: 0 5%;
 }
-.container ol, .container ul { padding: 0 8%; }
 .container p:first-of-type {
     margin-top: 40px;
 }
@@ -85,6 +54,7 @@ hr {
 /* keep embedded videos fluid! */
 .icontain {
   position: relative;
+  top: 25px;
   height: 0;
   overflow: hidden;
   padding-bottom: 56.25%; /* keep 16x9 Aspect Ratio */
@@ -92,7 +62,7 @@ hr {
 .i4x3 { padding-bottom: 75.00%; } /* keep 4x3 Aspect Ratio */
 .icontain iframe {
   position: absolute;
-  top:0;
+  top: 25px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -135,7 +105,7 @@ nav ul {
 nav ul li {
   display:inline-block;
   border-top:{{navborder}}px solid;
-  padding: {{navborder}}px;
+  padding: {{navborder}}px 0;
   *display:inline;
   zoom:1;
   line-height:normal;
@@ -158,7 +128,7 @@ nav ul li a:hover {
   opacity:1
 }
 nav ul li:hover, nav ul li.active {
-  border-top-width: {{navborder_active}}px;
+  border-top: {{navborder_active}}px solid;
   padding-top: 0;
 }
 
@@ -220,9 +190,8 @@ nav ul li:hover, nav ul li.active {
   font-size: 130px;
   position: static;
   margin-top: -8px;
+  color: #fff;
 }
-.sectiondivider .fa-circle { color: #fff; }
-
 .sectiondivider h5 {
   font-size:15px;
   font-weight:700;
