--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="{{site.url}}/combo2016.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-  {% if site.favicon %}<link rel="shortcut icon" href="{{ site.favicon }}" type="image/x-icon">{% endif %}
-	{% if site.touch_icon %}<link rel="apple-touch-icon" href="{{ site.touch_icon }}">{% endif %}
-
+  <!-- Icons -->
+  <link rel="favicon" sizes="144x144" href="{{ site.baseurl }}/img/favicon.png">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
 
 </head>
