--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,9 @@
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   <!-- Icons -->
-  <link rel="favicon" sizes="144x144" href="{{ site.baseurl }}/img/favicon.png">
+  <link rel="favicon" sizes="84x72" href="{{ site.baseurl }}/img/favicon.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
+<link rel="shortcut icon" type="image/png" href="/img/favicon.png">
+
 
 </head>
