--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,9 +18,8 @@
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   <!-- Icons -->
-
-<link rel="shortcut icon" type="image/png" href="{{site.url}}/img/favicon.png">
-
+<link rel="icon"  type="image/x-icon" href="{{ site.url }}//favicon.ico?">
+<link rel="shortcut icon" type="image/png" href="{{ site.url }}/img/favicon.png">
 
 {% include analytics.html %}
 
