--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -79,6 +79,12 @@ hr {
   text-align: center;
   padding: 0 4%;
 }
+
+.container .container h4 {
+  margin-bottom: 20px;
+  text-align: center;
+  padding: 0 4%;
+}
 .container p, .container ol, .container ul {
   font-size: 17px;
   padding: 0 5%;
