--- a/stylesheets/combo.css
+++ b/stylesheets/combo.css
@@ -5,4 +5,4 @@
 {% include_relative css/skeleton.css %}
 {% include_relative css/main.css %}
 {% include_relative css/overrides.css %}
-{% include_relative css/mystyle.css %}
+{% include_relative css/academicons.css %}
