--- a/stylesheets/combo.css
+++ b/stylesheets/combo.css
@@ -5,4 +5,5 @@
 {% include_relative css/skeleton.css %}
 {% include_relative css/main.css %}
 {% include_relative css/overrides.css %}
+{% include_relative css/overrides.css %}
 {% include_relative css/academicons.css %}
