--- a/_includes/speaker-card.html
+++ b/_includes/speaker-card.html
@@ -1,12 +1,17 @@
 <aside class="speaker-card {% if include.column %} {{ include.column }}{% endif %}">
    <header>
+    <h3>{{ include.title }}</h3>
    <img src="/img/speakers/{{ include.avatarurl }}">
-<h3>{{ include.profilename }}
-{% if include.homepage %}<a href="{{ include.homepage }}"><i class="fa fa-home fa-vc" style="position: relative; top: -3px; text-indent:0px; "></i></a>{% endif %}
+<h5>{{ include.profilename }}
+
+{% if include.homepage %}<a href="{{ include.homepage }}"><i class="fa fa-home" style="position: relative; top: -3px; text-indent:0px; "></i></a>{% endif %}
+
 {% if include.twitter %} <a href="https://twitter.com/{{ include.twitter }}"><i class="fa fa-twitter" style="position: relative; top: -5px;text-indent:0px;  vertical-align: middle;"></i></a> {% endif %}
 {% if include.git %} <a href="https://github.com/{{ include.git }}"><i class="fa fa-github" style="position: relative; top: -5px; text-indent:0px;  "></i></a>{% endif %}
-{% if include.researchgate %} <a href="https://www.researchgate.net/profile/{{ include.researchgate }}"> <i class="ai ai-researchgate fa-vc" style="  margin-bottom: -50px;position: relative; top: -5px;text-indent:0px;"  ></i></a>{% endif %} </h3>
-    <h3>{{ include.title }}</h3>
+{% if include.researchgate %} <a href="https://www.researchgate.net/profile/{{ include.researchgate }}"> <i class="ai ai-researchgate fa-vc" style="  margin-bottom: -50px;position: relative; top: -5px;text-indent:0px;"  ></i></a>{% endif %} 
+
+</h5>
+  <h6>{{ include.affiliation }}</h6>
    </header>
 </aside>
 
