--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -74,13 +74,8 @@ hr {
 .center { text-align: center; }
 .left, .container .left { text-align: left; }
 
-.container h1, .container h2, .container h3{
+.container h1, .container h2, .container h3, .container h4 {
   margin-bottom: 20px;
-  text-align: center;
-  padding: 0 4%;
-}
-
-.container h4 {
   text-align: center;
   padding: 0 4%;
 }
